--- a/index.html
+++ b/index.html
@@ -4,70 +4,72 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/style.css">
-    <title>Invasion is How we Conquer</title>
+    <title>Invasion Is How We Conquer</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   </head>
   <body>
     <header class="d-flex flex-column justify-content-between">
-      <div class="header-top d-flex px-4">
-        <a href="#" class="brand">
-          <img src="assets/icons-and-logos/logo dark transparent.png" alt="Invasion Icon">
-        </a>
-        <div class="sign d-flex align-items-center">
-          <a href="#"><div class="signin t-dark">Sign in</div></a>
-          <a href="#"><div class="signup t-light">Sign Up</div></a>
+      <div class="header-top-body d-flex justify-content-center">
+        <div class="header-top d-flex justify-content-between w-100">
+          <a href="#" class="brand">
+            <img src="assets/icons-and-logos/logo dark transparent.png" alt="Invasion Icon">
+          </a>
+          <div class="sign d-flex align-items-center">
+            <a href="#"><div class="signin t-dark">Sign in</div></a>
+            <a href="#"><div class="signup t-light">Sign Up</div></a>
+          </div>
         </div>
       </div>
-      <nav class="navbar navbar-expand-lg d-flex align-items-center">
-        <div class="container-fluid px-4">
-          <a href="#" class="brand">
-            <img src="assets/icons-and-logos/Logo light transparent.png" alt="Invasion Icon">
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active " aria-current="page" href="#"> <span class="t-dark">About us</span> </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#"><span class="t-dark">Talk to us</span></a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle t-dark" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  <span class="t-dark">New</span>
-                </a>
-                <ul class="dropdown-menu opacity-100 text-dark bc-dark">
-                  <li><a class="dropdown-item" href="#">New</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Popular</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Poll</a></li>
-                </ul>
-              </li>
-              <li class="nav-item d-flex align-items-center">
-                <div class="nav-sign d-flex align-items-center">
-                  <a href="#"><div class="nav-signin t-dark">Sign in</div></a>
-                  <a href="#"><div class="nav-signup t-light">Sign Up</div></a>
-                </div>
-              </li>
-            </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="search-button t-light" type="submit">Search</button>
-            </form>
+      <div class="navbar-body d-flex justify-content-center">
+        <nav class="navbar navbar-expand-lg d-flex align-items-center">
+          <div class="container-fluid p-0">
+            <a href="#" class="brand ms-4">
+              <img src="assets/icons-and-logos/logo dark transparent.png" alt="Invasion Icon">
+            </a>
+            <button class="navbar-toggler me-4" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0 px-4">
+                <li class="nav-item">
+                  <a class="nav-link active ps-0" aria-current="page" href="#"> <span class="t-dark">About us</span> </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#"><span class="t-dark">Talk to us</span></a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle t-dark" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <span class="t-dark">New</span>
+                  </a>
+                  <ul class="dropdown-menu opacity-100 text-dark bc-dark">
+                    <li><a class="dropdown-item" href="#">New</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="#">Popular</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="#">Poll</a></li>
+                  </ul>
+                </li>
+                <li class="nav-item d-flex align-items-center">
+                  <div class="nav-sign d-flex align-items-center">
+                    <a href="#"><div class="nav-signin t-dark">Sign in</div></a>
+                    <a href="#"><div class="nav-signup t-light">Sign Up</div></a>
+                  </div>
+                </li>
+              </ul>
+              <form class="d-flex me-4" role="search">
+                <input class="form-control me-2 ms-4" type="search" placeholder="Search" aria-label="Search">
+                <button class="search-button t-light" type="submit">Search</button>
+              </form>
+            </div>
           </div>
-  
-        </div>
-      </nav>
+        </nav>
+      </div>
+
     </header>
 
     <div class="content-container py-2 d-flex justify-content-center align-items-center">
-      <div class="content-body">
-        <div class="new-and-upcoming">
-          
-        </div>
+      <div class="content-body d-flex flex-column">
+
       </div>
     </div>
 
