--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <header class="d-flex flex-column justify-content-between">
       <div class="header-top-body d-flex justify-content-center">
         <div class="header-top d-flex justify-content-between w-100">
-          <a href="#" class="brand">
-            <img src="assets/icons-and-logos/logo dark transparent.png" alt="Invasion Icon">
+          <a href="#" class="brand mt-2 ms-2">
+            <img src="assets/icons-and-logos/Logo light transparent.png" alt="Invasion Icon">
           </a>
           <div class="sign d-flex align-items-center">
-            <a href="#"><div class="signin t-dark">Sign in</div></a>
+            <a href="#"><div class="signin t-light">Sign in</div></a>
             <a href="#"><div class="signup t-light">Sign Up</div></a>
           </div>
         </div>
@@ -30,7 +30,7 @@
       <!--                                            navbar -->
       <!--                                            navbar -->
       <div class="navbar-body d-flex justify-content-center">
-        <nav class="navbar navbar-expand-lg d-flex align-items-center">
+        <nav class="navbar navbar-expand-lg d-flex align-items-center fw-semibold">
           <div class="container-fluid p-0">
             <a href="#" class="brand ms-4">
               <img src="assets/icons-and-logos/logo dark transparent.png" alt="Invasion Icon">
@@ -50,7 +50,7 @@
                   <a class="nav-link dropdown-toggle t-dark" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     <span class="t-dark">New</span>
                   </a>
-                  <ul class="dropdown-menu opacity-100 text-dark bc-dark">
+                  <ul class="dropdown-menu opacity-100 text-dark bc-dark fw-semibold">
                     <li><a class="dropdown-item" href="#">New</a></li>
                     <li><hr class="dropdown-divider"></li>
                     <li><a class="dropdown-item" href="#">Popular</a></li>
@@ -88,57 +88,13 @@
     <!--                                                      Content -->
     <!--                                                      Content -->
     <!--                                                      Content -->
-    <div class="content-container py-2 d-flex justify-content-center">
-      <div class="content-body d-flex">
-        <div class="content-body-first d-flex flex-column align-items-center">
-          <div class="new-and-upcoming d-flex flex-column">
-            <div class="new-and-upcoming-top text-center t-light">
-              <span>
-                New & Upcoming
-              </span>
-            </div>
-            <div class="new-and-upcoming-content">
-              <div class="row new-and-upcoming-content-items">
-                <div class="col">
-
-                </div>
-                <div class="col">
-                  
-                </div>
-              </div>
-
-            </div>
-          </div>
-          <div class="monthly-ranking d-flex flex-column">
-            <div class="monthly-ranking-top text-center t-light">
-              <span style="text-transform: capitalize;">
-                monthly ranking
-              </span>
-            </div>
-            <div class="monthly-ranking-content">
-              <div class="monthly-ranking-content-items">
-
-              </div>
-
-            </div>
-          </div>
-          .
-        </div>
-        <div class="content-body-second d-flex flex-column align-items-center">
+    <div class="content-body d-flex justify-content-center">
+      <div class="content-container d-flex">
+        <div class="content-container-first d-flex flex-column">
           
-          <div class="voting-links d-flex flex-column">
-            <div class="voting-links-top text-center t-light">
-              <span style="font-size: 2em;">
-                Voting Links
-              </span>
-            </div>
-            <div class="voting-links-content">
-              <div class="voting-links-content-items">
+        </div>
+        <div class="content-container-second d-flex flex-column">
 
-              </div>
-
-            </div>
-          </div>
 
         </div>
       </div>
