Added Voting Links

--- a/index.html
+++ b/index.html
@@ -134,8 +134,24 @@
           </div>
         </div>
 
-        <div class="content-container-second">
-          
+        <div class="content-container-second d-flex flex-column align-items-center">
+          <div class="voting-links d-flex flex-column">
+            <div class="subheader">Voting Links</div>
+            <div class="voting-links-content d-flex flex-column align-items-center">
+              <a href="#" class="content2 voting-links-content1">
+                
+              </a>
+              <a href="#" class="content3 voting-links-content1">
+
+              </a>
+              <a href="#" class="content2 voting-links-content1">
+
+              </a>
+              <a href="#" class="content3 voting-links-content1">
+
+              </a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
