--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/style.css">
-    <title>Invasion Is How We Conquer</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <title>Invasion Is How We Conquer</title>
   </head>
   <body>
     <!--                                             header -->
@@ -29,7 +30,7 @@
       <!--                                            navbar -->
       <!--                                            navbar -->
       <!--                                            navbar -->
-      <div class="navbar-body d-flex justify-content-center">
+      <div class="navbar-body d-flex justify-content-center align-items-center">
         <nav class="navbar navbar-expand-lg d-flex align-items-center fw-semibold">
           <div class="container-fluid p-0">
             <a href="#" class="brand ms-4">
@@ -91,7 +92,7 @@
     <div class="content-container-body d-flex justify-content-center">
       <div class="content-container d-flex">
         <div class="content-container-first d-flex flex-column justify-content-center align-items-center">
-          <div class="new-titles d-flex flex-column align-items-center">
+          <div class="new-titles d-flex flex-column align-items-center shadowed">
             <div class="subheader">New Titles</div>
             <div class="new-titles-content d-flex flex-column align-items-center">
               <a href="#" class="content1 new-titles-content1">
@@ -112,7 +113,7 @@
             </div>
           </div>
           
-          <div class="annual-ranking d-flex flex-column align-items-center">
+          <div class="annual-ranking d-flex flex-column align-items-center shadowed">
             <div class="subheader">Annual Ranking</div>
             <div class="annual-ranking-content d-flex flex-column align-items-center">
               <a href="#" class="content1 annual-ranking-content1">
@@ -135,20 +136,55 @@
         </div>
 
         <div class="content-container-second d-flex flex-column align-items-center">
-          <div class="voting-links d-flex flex-column">
+          <div class="voting-links d-flex flex-column shadowed">
             <div class="subheader">Voting Links</div>
             <div class="voting-links-content d-flex flex-column align-items-center">
-              <a href="#" class="content2 voting-links-content1">
-                
+              <a href="#" class="content2 voting-links-content d-flex ">
+                <span class="material-symbols-outlined">
+                  social_leaderboard
+                </span>
+                <span>Game of the Year</span>
               </a>
-              <a href="#" class="content3 voting-links-content1">
-
+              <a href="#" class="content3 voting-links-content d-flex ">
+                <span class="material-symbols-outlined ">
+                  history_edu
+                </span>
+                <span>Best Story</span>
               </a>
-              <a href="#" class="content2 voting-links-content1">
-
+              <a href="#" class="content2 voting-links-content d-flex ">
+                <span class="material-symbols-outlined">
+                  woman
+                </span>
+                <span>Best Female Character</span>
               </a>
-              <a href="#" class="content3 voting-links-content1">
-
+              <a href="#" class="content3 voting-links-content d-flex ">
+                <span class="material-symbols-outlined">
+                  man_3
+                </span>
+                <span>Best Male Character</span>
+              </a>
+            </div>
+          </div>
+          <div class="articles d-flex flex-column shadowed">
+            <div class="subheader">Articles</div>
+            <div class="articles-content d-flex flex-column align-items-center">
+              <a href="#" class="content4 articles-content d-flex ">
+                <span>Don't Worry, Redfall Puts An Unmistakably Arkane Spin On The Looter Shooter</span>
+              </a>
+              <a href="#" class="content5 articles-content d-flex ">
+                <span>Counter-Strike 2 Confirmed For Summer 2023 Release, Limited Test Begins Today</span>
+              </a>
+              <a href="#" class="content4 articles-content d-flex ">
+                <span>How To Access The Counter-Strike 2 Beta Limited Test</span>
+              </a>
+              <a href="#" class="content5 articles-content d-flex ">
+                <span>Fortnite Creative 2.0 And UEFN: Everything You Need To Know</span>
+              </a>
+              <a href="#" class="content4 articles-content d-flex ">
+                <span>Mass Effect Andromeda Entered A New Galaxy Only To Revisit Old Conflicts</span>
+              </a>
+              <a href="#" class="content5 articles-content d-flex ">
+                <span>Horizon Forbidden West Burning Shores DLC Preorders Are Live Now</span>
               </a>
             </div>
           </div>
@@ -159,7 +195,25 @@
     <!--                                                    Content end -->
     <!--                                                    Content end -->
     <!--                                                    Content end -->
+    <div class="footer-body d-flex justify-content-center">
+      <footer>
+        <div class="footer-top">
+          <div class="footer-logo">
 
+          </div>
+          <div class="footer-links">
+
+          </div>
+          <div class="contacts-socials">
+
+          </div>
+        </div>
+        <div class="footer-bottom">
+
+        </div>
+      </footer>
+    </div>
+  
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
