--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/c6771b9339.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <title>Invasion Is How We Conquer</title>
   </head>
@@ -21,7 +22,7 @@
             <img src="assets/icons-and-logos/Logo light transparent.png" alt="Invasion Icon">
           </a>
           <div class="sign d-flex align-items-center">
-            <a href="#"><div class="signin t-light">Sign in</div></a>
+            <a href="#"><div class="signin t-light text-shadowed">Sign in</div></a>
             <a href="#"><div class="signup t-light">Sign Up</div></a>
           </div>
         </div>
@@ -34,7 +35,7 @@
         <nav class="navbar navbar-expand-lg d-flex align-items-center fw-semibold">
           <div class="container-fluid p-0">
             <a href="#" class="brand ms-4">
-              <img src="assets/icons-and-logos/logo dark transparent.png" alt="Invasion Icon">
+              <img src="assets/icons-and-logos/Logo light transparent.png" alt="Invasion Icon">
             </a>
             <button class="navbar-toggler me-4" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -42,14 +43,14 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0 px-4">
                 <li class="nav-item">
-                  <a class="nav-link active ps-0" aria-current="page" href="#"> <span class="t-dark">About us</span> </a>
+                  <a class="nav-link active ps-0" aria-current="page" href="#"> <span class="t-light   text-shadowed">About us</span> </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#"><span class="t-dark">Talk to us</span></a>
+                  <a class="nav-link active" aria-current="page" href="#"><span class="t-light   text-shadowed">Talk to us</span></a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle t-dark" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    <span class="t-dark">New</span>
+                    <span class="t-light   text-shadowed">New</span>
                   </a>
                   <ul class="dropdown-menu opacity-100 text-dark bc-dark fw-semibold">
                     <li><a class="dropdown-item" href="#">New</a></li>
@@ -61,7 +62,7 @@
                 </li>
                 <li class="nav-item d-flex align-items-center">
                   <div class="nav-sign d-flex align-items-center">
-                    <a href="#"><div class="nav-signin t-dark">Sign in</div></a>
+                    <a href="#"><div class="nav-signin text-shadowed t-light">Sign in</div></a>
                     <a href="#"><div class="nav-signup t-light">Sign Up</div></a>
                   </div>
                 </li>
@@ -196,20 +197,64 @@
     <!--                                                    Content end -->
     <!--                                                    Content end -->
     <div class="footer-body d-flex justify-content-center">
-      <footer>
-        <div class="footer-top">
-          <div class="footer-logo">
-
+      <footer class="d-flex flex-column">
+        <div class="footer-top d-flex">
+          <div class="footer-logo d-flex align-items-center ">
+            <img src="/assets/icons-and-logos/Logo light transparent(Logo only).png" alt="">
           </div>
-          <div class="footer-links">
-
+          <div class="footer-links d-flex flex-column">
+            <ul class="d-flex flex-column">
+              <li><a href="#" class="footer-brand align-self-center">Invasion</a></li>
+              <li><a href="">About us</a></li>
+              <li><a href="">Privacy and Policy</a></li>
+            </ul>
           </div>
-          <div class="contacts-socials">
-
+          <div class="contacts-socials d-flex flex-column">
+            <div class="follow-us">
+              <span class="t-30 fw-bold">
+                FOLLOW US:
+              </span>
+              <div class="footer-socials d-flex flex-wrap">
+                <a href="" class="socials socials1">
+                  <i class="fa-brands fa-square-facebook"></i>
+                </a>
+                <a href="" class="socials socials2">
+                  <i class="fa-brands fa-square-twitter"></i>
+                </a>
+                <a href="" class="socials socials3">
+                  <i class="fa-brands fa-square-tumblr"></i>
+                </a>
+                <a href="" class="socials socials4">
+                  <i class="fa-brands fa-square-instagram"></i>
+                </a>
+                <a href="" class="socials socials5">
+                  <i class="fa-brands fa-square-youtube"></i>
+                </a>
+                <a href="" class="socials socials6">
+                  <i class="fa-brands fa-discord"></i>
+                </a>
+                <a href="" class="socials socials7">
+                  <i class="fa-brands fa-square-reddit"></i>
+                </a>
+                <a href="" class="socials socials8">
+                  <i class="fa-brands fa-twitch"></i>
+                </a>
+              </div>
+            </div>
+            <div class="contact-us d-flex flex-column">
+              <span class="t-30 fw-bold">
+                CONTACT US:
+              </span>
+              <ul>
+                <li>contact@invasion.com</li>
+                <li>support@invasion.com</li>
+                <li>news@invasion.com</li>
+              </ul>
+            </div>
           </div>
         </div>
-        <div class="footer-bottom">
-
+        <div class="footer-bottom text-center t-light">
+          Copyright Invasion © 2013 - 2021 | All Rights Reserved
         </div>
       </footer>
     </div>
