--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <header class="d-flex flex-column justify-content-between">
       <div class="header-top-body d-flex justify-content-center">
         <div class="header-top d-flex justify-content-between w-100">
-          <a href="#" class="brand mt-2 ms-2">
+          <a href="index.html" class="brand mt-2 ms-2">
             <img src="assets/icons-and-logos/Logo light transparent.png" alt="Invasion Icon">
           </a>
           <div class="sign d-flex align-items-center">
-            <a href="#"><div class="signin t-light text-shadowed">Sign in</div></a>
+            <a href="#"><div class="signin t-light text-shadowed-dark">Sign in</div></a>
             <a href="#"><div class="signup t-light">Sign Up</div></a>
           </div>
         </div>
@@ -34,7 +34,7 @@
       <div class="navbar-body d-flex justify-content-center align-items-center">
         <nav class="navbar navbar-expand-lg d-flex align-items-center fw-semibold">
           <div class="container-fluid p-0">
-            <a href="#" class="brand ms-4">
+            <a href="index.html" class="brand ms-4">
               <img src="assets/icons-and-logos/Logo light transparent.png" alt="Invasion Icon">
             </a>
             <button class="navbar-toggler me-4" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,14 +43,14 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0 px-4">
                 <li class="nav-item">
-                  <a class="nav-link active ps-0" aria-current="page" href="#"> <span class="t-light   text-shadowed">About us</span> </a>
+                  <a class="nav-link active ps-0" aria-current="page" href="#"> <span class="t-light   text-shadowed-dark">About us</span> </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#"><span class="t-light   text-shadowed">Talk to us</span></a>
+                  <a class="nav-link active" aria-current="page" href="#"><span class="t-light   text-shadowed-dark">Talk to us</span></a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle t-dark" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    <span class="t-light   text-shadowed">New</span>
+                    <span class="t-light   text-shadowed-dark">New</span>
                   </a>
                   <ul class="dropdown-menu opacity-100 text-dark bc-dark fw-semibold">
                     <li><a class="dropdown-item" href="#">New</a></li>
@@ -62,7 +62,7 @@
                 </li>
                 <li class="nav-item d-flex align-items-center">
                   <div class="nav-sign d-flex align-items-center">
-                    <a href="#"><div class="nav-signin text-shadowed t-light">Sign in</div></a>
+                    <a href="#"><div class="nav-signin text-shadowed-dark t-light">Sign in</div></a>
                     <a href="#"><div class="nav-signup t-light">Sign Up</div></a>
                   </div>
                 </li>
