linked index to game pages

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
                     <span class="t-light   text-shadowed-dark">New</span>
                   </a>
                   <ul class="dropdown-menu opacity-100 text-dark bc-dark fw-semibold">
-                    <li><a class="dropdown-item" href="#">New</a></li>
+                    <li><a class="dropdown-item" href="#new-titles">New</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#">Popular</a></li>
+                    <li><a class="dropdown-item" href="#annual-ranking">Annual Ranking</a></li>
                     <li><hr class="dropdown-divider"></li>
                     <li><a class="dropdown-item" href="#">Poll</a></li>
                   </ul>
@@ -94,42 +94,42 @@
       <div class="content-container d-flex">
         <div class="content-container-first d-flex flex-column justify-content-center align-items-center">
           <div class="new-titles d-flex flex-column align-items-center shadowed">
-            <div class="subheader">New Titles</div>
+            <div class="subheader" id="new-titles">New Titles</div>
             <div class="new-titles-content d-flex flex-column align-items-center">
-              <a href="#" class="content1 new-titles-content1">
+              <a href="game.html" class="content1 new-titles-content1">
                   The Legend of Zelda: Tears of the Kingdom
               </a>
-              <a href="#" class="content1 new-titles-content2">
+              <a href="game.html" class="content1 new-titles-content2">
                 Final Fantasy XVI
               </a>
-              <a href="#" class="content1 new-titles-content3">
+              <a href="game.html" class="content1 new-titles-content3">
                 Diablo IV
               </a>
-              <a href="#" class="content1 new-titles-content4">
+              <a href="game.html" class="content1 new-titles-content4">
                 Starfield
               </a>
-              <a href="#" class="content1 new-titles-content5">
+              <a href="game.html" class="content1 new-titles-content5">
                 Hogwarts Legacy
               </a>
             </div>
           </div>
           
           <div class="annual-ranking d-flex flex-column align-items-center shadowed">
-            <div class="subheader">Annual Ranking</div>
+            <div class="subheader" id="annual-ranking">Annual Ranking</div>
             <div class="annual-ranking-content d-flex flex-column align-items-center">
-              <a href="#" class="content1 annual-ranking-content1">
+              <a href="game.html" class="content1 annual-ranking-content1">
                 1. Elden Ring
               </a>
-              <a href="#" class="content1 annual-ranking-content2">
+              <a href="game.html" class="content1 annual-ranking-content2">
                 2. God of War Ragnarök
               </a>
-              <a href="#" class="content1 annual-ranking-content3">
+              <a href="game.html" class="content1 annual-ranking-content3">
                 3. Vampire Survivors
               </a>
-              <a href="#" class="content1 annual-ranking-content4">
+              <a href="game.html" class="content1 annual-ranking-content4">
                 4. Marvel Snap
               </a>
-              <a href="#" class="content1 annual-ranking-content5">
+              <a href="game.html" class="content1 annual-ranking-content5">
                 5. Citizen Sleeper
               </a>
             </div>
