--- a/game.html
+++ b/game.html
@@ -43,17 +43,17 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0 px-4">
                 <li class="nav-item">
-                  <a class="nav-link active ps-0" aria-current="page" href="#"> <span class="t-light   text-shadowed">About us</span> </a>
+                  <a class="nav-link active ps-0" aria-current="page" href="#"> <span class="t-light   text-shadowed-dark">About us</span> </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#"><span class="t-light   text-shadowed">Talk to us</span></a>
+                  <a class="nav-link active" aria-current="page" href="#"><span class="t-light   text-shadowed-dark">Talk to us</span></a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle t-dark" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    <span class="t-light   text-shadowed">New</span>
+                    <span class="t-light text-shadowed-dark">New</span>
                   </a>
                   <ul class="dropdown-menu opacity-100 text-dark bc-dark fw-semibold">
-                    <li><a class="dropdown-item" href="#">New</a></li>
+                    <li><a class="dropdown-item " href="#">New</a></li>
                     <li><hr class="dropdown-divider"></li>
                     <li><a class="dropdown-item" href="#">Popular</a></li>
                     <li><hr class="dropdown-divider"></li>
@@ -62,7 +62,7 @@
                 </li>
                 <li class="nav-item d-flex align-items-center">
                   <div class="nav-sign d-flex align-items-center">
-                    <a href="#"><div class="nav-signin text-shadowed t-light">Sign in</div></a>
+                    <a href="#"><div class="nav-signin text-shadowed-dark t-light">Sign in</div></a>
                     <a href="#"><div class="nav-signup t-light">Sign Up</div></a>
                   </div>
                 </li>
@@ -94,8 +94,11 @@
               <span class="game-developer t-light text-shadowed-dark"> FromSoftware</span>
             </a>
             <div class="ratings d-flex justify-content-center text-shadowed-dark">
-              <span class="ratings-score">4.7</span>
-              <span class="ratings-max t-light">/5</span>
+              <div >
+                <span class="ratings-score">
+                  4.7
+                </span>
+              </div>
             </div>
           </div>
           <div class="content-container-first-bottom d-flex flex-column t-light">
