--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <!--                                                      Content -->
     <div class="content-container-body d-flex justify-content-center">
       <div class="content-container d-flex">
-        <div class="content-container-first d-flex flex-column justify-content-center align-items-center">
+        <div class="content-container-first d-flex flex-column justify-content-center align-items-start">
           <div class="new-titles d-flex flex-column align-items-center shadowed">
             <div class="subheader" id="new-titles">New Titles</div>
             <div class="new-titles-content d-flex flex-column align-items-center">
@@ -136,7 +136,7 @@
           </div>
         </div>
 
-        <div class="content-container-second d-flex flex-column align-items-center">
+        <div class="content-container-second d-flex flex-column align-items-end">
           <div class="voting-links d-flex flex-column shadowed">
             <div class="subheader">Voting Links</div>
             <div class="voting-links-content d-flex flex-column align-items-center">
