added voting page

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <!--                                                      Content -->
     <div class="content-container-body d-flex justify-content-center">
       <div class="content-container d-flex">
-        <div class="content-container-first d-flex flex-column justify-content-center align-items-start">
+        <div class="content-container-first d-flex flex-column">
           <div class="new-titles d-flex flex-column align-items-center shadowed">
             <div class="subheader" id="new-titles">New Titles</div>
             <div class="new-titles-content d-flex flex-column align-items-center">
@@ -136,7 +136,7 @@
           </div>
         </div>
 
-        <div class="content-container-second d-flex flex-column align-items-end">
+        <div class="content-container-second d-flex flex-column">
           <div class="voting-links d-flex flex-column shadowed">
             <div class="subheader">Voting Links</div>
             <div class="voting-links-content d-flex flex-column align-items-center">
@@ -202,14 +202,14 @@
           <div class="footer-logo d-flex align-items-center ">
             <img src="assets/icons-and-logos/Logo light transparent(Logo only).png" alt="">
           </div>
-          <div class="footer-links d-flex flex-column">
-            <ul class="d-flex flex-column">
+          <div class="footer-links d-flex flex-column justify-content-center">
+            <ul class="d-flex flex-column text-shadowed-dark">
               <li><a href="#" class="footer-brand align-self-center">Invasion</a></li>
               <li><a href="">About us</a></li>
               <li><a href="">Privacy and Policy</a></li>
             </ul>
           </div>
-          <div class="contacts-socials d-flex flex-column">
+          <div class="contacts-socials d-flex flex-column align-items-center">
             <div class="follow-us">
               <span class="t-30 fw-bold">
                 FOLLOW US:
@@ -241,11 +241,11 @@
                 </a>
               </div>
             </div>
-            <div class="contact-us d-flex flex-column">
+            <div class="contact-us d-flex flex-column ">
               <span class="t-30 fw-bold">
                 CONTACT US:
               </span>
-              <ul>
+              <ul class="text-shadowed-dark">
                 <li>contact@invasion.com</li>
                 <li>support@invasion.com</li>
                 <li>news@invasion.com</li>
@@ -253,7 +253,7 @@
             </div>
           </div>
         </div>
-        <div class="footer-bottom text-center t-light">
+        <div class="footer-bottom text-center t-light text-shadowed-dark">
           Copyright Invasion © 2022 - 2023 | All Rights Reserved
         </div>
       </footer>
