--- a/voting.html
+++ b/voting.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="assets/gamestyle.css">
+    <link rel="stylesheet" href="assets/votingstyle.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/c6771b9339.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0" />
-    <title>Elden Ring</title>
-</head>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <title>Game of the Year</title>
+  </head>
 <body>
       <!--                                             header -->
-    <!--                                             header -->
     <!--                                             header -->
     <!--                                             header -->
     <!--                                             header -->
@@ -85,175 +84,28 @@
     <!--                                          Header End          -->
     <!--                                          Header End          -->
 
-    <div class="content-container-body d-flex justify-content-center align-items-center">
-      <div class="content-container d-flex">
-        <div class="content-container-first d-flex flex-column">
-          <div class="content-container-first-top d-flex justify-content-between">
-            <a class="game-name d-flex flex-column">
-              <span class="game-title t-light text-shadowed-dark">Elden Ring</span>
-              <span class="game-developer t-light text-shadowed-dark"> FromSoftware</span>
-            </a>
-            <div class="ratings d-flex justify-content-center text-shadowed-dark">
-              <div >
-                <span class="ratings-score">
-                  4.7
-                </span>
-              </div>
-            </div>
-          </div>
-          <div class="content-container-first-bottom d-flex flex-column t-light">
-            <div class="reviews d-flex flex-column">
-              <span class="reviews-subheader">Review</span>
-              <div class="review-as ">
-                <span class="review-as1">Review as Anonymous or</span>
-                <a href="#" class="review-signin"><span>signin</span>  </a>
-              </div>
-              <div class="stars">
-                <span class="material-symbols-outlined stars1">
-                  star
-                </span>
-                <span class="material-symbols-outlined stars1">
-                  star
-                </span>
-                <span class="material-symbols-outlined stars1">
-                  star
-                </span>
-                <span class="material-symbols-outlined stars1">
-                  star
-                </span>
-                <span class="material-symbols-outlined stars2">
-                  star
-                </span>
-              </div>
-              <div class="review-area d-flex flex-column">
-                <textarea name="review-area" id="" cols="30" rows="5" placeholder="What are your thoughts?"></textarea>
-              </div>
-              <div class="review-actions d-flex justify-content-end">
-                <button>Post</button>
-              </div>
-            </div>
-            <div class="users-reviews d-flex flex-column">
-              <div class="users-reviews1 d-flex flex-column">
-                <div class="users d-flex align-items-center">
-                  <img src="assets/icons-and-logos/user.png" alt="">
-                  <span class="users-name">AtomicNoob123 |</span>
-                  <span class="users-comment-time">5hrs ago</span>
-
-                </div>
-                <div class="stars users-reviews1-stars">
-                  <span class="material-symbols-outlined stars1">
-                    star
-                  </span>
-                  <span class="material-symbols-outlined stars2">
-                    star
-                  </span>
-                  <span class="material-symbols-outlined stars2">
-                    star
-                  </span>
-                  <span class="material-symbols-outlined stars2">
-                    star
-                  </span>
-                  <span class="material-symbols-outlined stars2">
-                    star
-                  </span>
-                </div>
-                <span class="users-comment">
-                  THIS GAMES SUX IT'S TOO HARD
-                </span>
-                <div class="users-reviews1-actions d-flex">
-                  <button class="d-flex align-items-center">
-                    <span class="material-symbols-outlined">
-                      reply
-                    </span>
-                    <span>Reply</span>
-                  </button>
-                  <button class="d-flex align-items-center">
-                    <span class="material-symbols-outlined">
-                      share
-                    </span>
-                    <span>Share</span>
-                  </button>
-                </div>
-              </div>
-              <div class="users-reviews1 d-flex flex-column">
-                <div class="users d-flex align-items-center">
-                  <img src="assets/icons-and-logos/user.png" alt="">
-                  <span class="users-name">letmesoloher |</span>
-                  <span class="users-comment-time">1 week ago</span>
-
-                </div>
-                <div class="stars users-reviews1-stars">
-                  <span class="material-symbols-outlined stars1">
-                    star
-                  </span>
-                  <span class="material-symbols-outlined stars1">
-                    star
-                  </span>
-                  <span class="material-symbols-outlined stars1">
-                    star
-                  </span>
-                  <span class="material-symbols-outlined stars1">
-                    star
-                  </span>
-                  <span class="material-symbols-outlined stars1">
-                    star
-                  </span>
-                </div>
-                <span class="users-comment">
-                  I enjoyed the games so much! Great job by FromSoftware yet again. I Killed hardest boss 1000 times btw!
-                </span>
-                <div class="users-reviews1-actions d-flex">
-                  <button class="d-flex align-items-center">
-                    <span class="material-symbols-outlined">
-                      reply
-                    </span>
-                    <span>Reply</span>
-                  </button>
-                  <button class="d-flex align-items-center">
-                    <span class="material-symbols-outlined">
-                      share
-                    </span>
-                    <span>Share</span>
-                  </button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="content-container-second d-flex align-items-center justify-content-center">
-          <div class="voting-links d-flex flex-column shadowed">
-            <div class="subheader">Voting Links</div>
-            <div class="voting-links-content d-flex flex-column align-items-center">
-              <a href="#" class="content2 voting-links-content d-flex ">
-                <span class="material-symbols-outlined">
-                  social_leaderboard
-                </span>
-                <span>Game of the Year</span>
-              </a>
-              <a href="#" class="content3 voting-links-content d-flex ">
-                <span class="material-symbols-outlined ">
-                  history_edu
-                </span>
-                <span>Best Story</span>
-              </a>
-              <a href="#" class="content2 voting-links-content d-flex ">
-                <span class="material-symbols-outlined">
-                  woman
-                </span>
-                <span>Best Female Character</span>
-              </a>
-              <a href="#" class="content3 voting-links-content d-flex ">
-                <span class="material-symbols-outlined">
-                  man_3
-                </span>
-                <span>Best Male Character</span>
-              </a>
-            </div>
-          </div>
+    <!--                                                        content -->
+    <!--                                                        content -->
+    <!--                                                        content -->
+    <!--                                                        content -->
+    <div class="content-container-body d-flex">
+      <div class="content-container">
+        <div class="voting">
+          
         </div>
       </div>
     </div>
+    <!--                                                    content end -->
+    <!--                                                    content end -->
+    <!--                                                    content end -->
+    <!--                                                    content end -->
+
+
+
+    <!--                                                        Footer -->
+    <!--                                                        Footer -->
+    <!--                                                        Footer -->
+    <!--                                                        Footer -->
     <div class="footer-body d-flex justify-content-center">
       <footer class="d-flex flex-column">
         <div class="footer-top d-flex">
@@ -316,8 +168,6 @@
         </div>
       </footer>
     </div>
-
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
