linked voting pages

--- a/index.html
+++ b/index.html
@@ -140,25 +140,25 @@
           <div class="voting-links d-flex flex-column shadowed">
             <div class="subheader">Voting Links</div>
             <div class="voting-links-content d-flex flex-column align-items-center">
-              <a href="#" class="content2 voting-links-content d-flex ">
+              <a href="voting.html" class="content2 voting-links-content d-flex ">
                 <span class="material-symbols-outlined">
                   social_leaderboard
                 </span>
                 <span>Game of the Year</span>
               </a>
-              <a href="#" class="content3 voting-links-content d-flex ">
+              <a href="voting.html" class="content3 voting-links-content d-flex ">
                 <span class="material-symbols-outlined ">
                   history_edu
                 </span>
                 <span>Best Story</span>
               </a>
-              <a href="#" class="content2 voting-links-content d-flex ">
+              <a href="voting.html" class="content2 voting-links-content d-flex ">
                 <span class="material-symbols-outlined">
                   woman
                 </span>
                 <span>Best Female Character</span>
               </a>
-              <a href="#" class="content3 voting-links-content d-flex ">
+              <a href="voting.html" class="content3 voting-links-content d-flex ">
                 <span class="material-symbols-outlined">
                   man_3
                 </span>
