--- a/index.html
+++ b/index.html
@@ -31,55 +31,56 @@
       <!--                                            navbar -->
       <!--                                            navbar -->
       <!--                                            navbar -->
-      <div class="navbar-body d-flex justify-content-center align-items-center">
-        <nav class="navbar navbar-expand-lg d-flex align-items-center fw-semibold">
-          <div class="container-fluid p-0">
-            <a href="index.html" class="brand ms-4">
-              <img src="assets/icons-and-logos/Logo light transparent.png" alt="Invasion Icon">
-            </a>
-            <button class="navbar-toggler me-4" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0 px-4">
-                <li class="nav-item">
-                  <a class="nav-link active ps-0" aria-current="page" href="#"> <span class="t-light   text-shadowed-dark">About us</span> </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#"><span class="t-light   text-shadowed-dark">Talk to us</span></a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle t-dark" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    <span class="t-light   text-shadowed-dark">New</span>
-                  </a>
-                  <ul class="dropdown-menu opacity-100 text-dark bc-dark fw-semibold">
-                    <li><a class="dropdown-item" href="#new-titles">New</a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#annual-ranking">Annual Ranking</a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#">Poll</a></li>
-                  </ul>
-                </li>
-                <li class="nav-item d-flex align-items-center">
-                  <div class="nav-sign d-flex align-items-center">
-                    <a href="#"><div class="nav-signin text-shadowed-dark t-light">Sign in</div></a>
-                    <a href="#"><div class="nav-signup t-light">Sign Up</div></a>
-                  </div>
-                </li>
-              </ul>
-              <form class="d-flex me-4" role="search">
-                <input class="form-control me-2 ms-4" type="search" placeholder="Search" aria-label="Search">
-                <button class="search-button t-light" type="submit">Search</button>
-              </form>
-            </div>
-          </div>
-        </nav>
-      </div>
+
       <!--                                                navbar end -->
       <!--                                                navbar end -->
       <!--                                                navbar end -->
       <!--                                                navbar end -->
     </header>
+    <div class="navbar-body d-flex justify-content-center align-items-center">
+      <nav class="navbar navbar-expand-lg d-flex align-items-center fw-semibold bc-60">
+        <div class="container-fluid p-0">
+          <a href="index.html" class="brand ms-4">
+            <img src="assets/icons-and-logos/logo dark transparent.png" alt="Invasion Icon">
+          </a>
+          <button class="navbar-toggler me-4" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 px-4">
+              <li class="nav-item">
+                <a class="nav-link active ps-0" aria-current="page" href="#"> <span class="t-light   text-shadowed-dark">About us</span> </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#"><span class="t-light   text-shadowed-dark">Talk to us</span></a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle t-dark" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  <span class="t-light   text-shadowed-dark">New</span>
+                </a>
+                <ul class="dropdown-menu opacity-100 text-dark bc-dark fw-semibold">
+                  <li><a class="dropdown-item" href="#new-titles">New</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="#annual-ranking">Annual Ranking</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="#">Poll</a></li>
+                </ul>
+              </li>
+              <li class="nav-item d-flex align-items-center">
+                <div class="nav-sign d-flex align-items-center">
+                  <a href="#"><div class="nav-signin text-shadowed-dark t-light">Sign in</div></a>
+                  <a href="#"><div class="nav-signup t-light">Sign Up</div></a>
+                </div>
+              </li>
+            </ul>
+            <form class="d-flex me-4" role="search">
+              <input class="form-control me-2 ms-4" type="search" placeholder="Search" aria-label="Search">
+              <button class="search-button t-light" type="submit">Search</button>
+            </form>
+          </div>
+        </div>
+      </nav>
+    </div>
     <!--                                          Header End          -->
     <!--                                          Header End          -->
     <!--                                          Header End          -->
