--- a/index.html
+++ b/index.html
@@ -170,22 +170,22 @@
           <div class="articles d-flex flex-column shadowed">
             <div class="subheader">Articles</div>
             <div class="articles-content d-flex flex-column align-items-center">
-              <a href="#" class="content4 articles-content d-flex ">
+              <a href="https://www.gamespot.com/articles/dont-worry-redfall-puts-an-unmistakably-arkane-spin-on-the-looter-shooter/1100-6512521/" class="content4 articles-content d-flex ">
                 <span>Don't Worry, Redfall Puts An Unmistakably Arkane Spin On The Looter Shooter</span>
               </a>
-              <a href="#" class="content5 articles-content d-flex ">
+              <a href="https://www.gamespot.com/articles/counter-strike-2-confirmed-for-summer-2023-release-limited-test-begins-today/1100-6512606/" class="content5 articles-content d-flex ">
                 <span>Counter-Strike 2 Confirmed For Summer 2023 Release, Limited Test Begins Today</span>
               </a>
-              <a href="#" class="content4 articles-content d-flex ">
+              <a href="https://www.gamespot.com/articles/how-to-access-the-counter-strike-2-beta-limited-test/1100-6512607/" class="content4 articles-content d-flex ">
                 <span>How To Access The Counter-Strike 2 Beta Limited Test</span>
               </a>
-              <a href="#" class="content5 articles-content d-flex ">
+              <a href="https://www.gamespot.com/articles/fortnite-creative-2-0-and-uefn-everything-you-need-to-know/1100-6512614/" class="content5 articles-content d-flex ">
                 <span>Fortnite Creative 2.0 And UEFN: Everything You Need To Know</span>
               </a>
-              <a href="#" class="content4 articles-content d-flex ">
+              <a href="https://www.gamespot.com/articles/mass-effect-andromeda-entered-a-new-galaxy-only-to-revisit-old-conflicts/1100-6512548/" class="content4 articles-content d-flex ">
                 <span>Mass Effect Andromeda Entered A New Galaxy Only To Revisit Old Conflicts</span>
               </a>
-              <a href="#" class="content5 articles-content d-flex ">
+              <a href="https://www.gamespot.com/articles/horizon-forbidden-west-burning-shores-dlc-preorders-are-live-now/1100-6512590/" class="content5 articles-content d-flex ">
                 <span>Horizon Forbidden West Burning Shores DLC Preorders Are Live Now</span>
               </a>
             </div>
