--- a/voting.html
+++ b/voting.html
@@ -93,9 +93,94 @@
     <!--                                                        content -->
     <!--                                                        content -->
     <div class="content-container-body d-flex">
-      <div class="content-container">
-        <div class="voting">
-          
+      <div class="content-container d-flex">
+        <div class="voting d-flex">
+          <div class="voting-sub-header t-light">
+            <span>
+              Game Of The Year
+            </span>
+          </div>
+          <div class="voting-search-bar d-flex">
+            <input type="text" placeholder="Search for a Game">
+            <button class="t-light">Search</button>
+          </div>
+          <div class="voting-content d-flex">
+            <div class="voting-content-first">
+              <div class="content voting-content1 d-flex">
+                <button><i class="fa-solid fa-circle-arrow-up"></i></button>
+                <div class="title-dev d-flex">
+                  <span class="title t-light text-shadowed-dark">Elden Ring</span>
+                  <span class="dev t-light text-shadowed-dark">FromSoftware</span>
+                </div>
+              </div>
+              <div class="content voting-content3 d-flex">
+                <button><i class="fa-solid fa-circle-arrow-up"></i></button>
+                <div class="title-dev d-flex">
+                  <span class="title t-light text-shadowed-dark">The Legend of Zelda: Tears of the Kingdom</span>
+                  <span class="dev t-light text-shadowed-dark">Nintendo</span>
+                </div>
+              </div>
+              <div class="content voting-content5 d-flex">
+                <button><i class="fa-solid fa-circle-arrow-up"></i></button>
+                <div class="title-dev d-flex">
+                  <span class="title t-light text-shadowed-dark">Diablo IV</span>
+                  <span class="dev t-light text-shadowed-dark">Blizzard Entertainment</span>
+                </div>
+              </div>
+              <div class="content voting-content7 d-flex">
+                <button><i class="fa-solid fa-circle-arrow-up"></i></button>
+                <div class="title-dev d-flex">
+                  <span class="title t-light text-shadowed-dark">Hogwarts Legacy</span>
+                  <span class="dev t-light text-shadowed-dark">Avalanche Software</span>
+                </div>
+              </div>
+              <div class="content voting-content9 d-flex">
+                <button><i class="fa-solid fa-circle-arrow-up"></i></button>
+                <div class="title-dev d-flex">
+                  <span class="title t-light text-shadowed-dark">MARVEL SNAP</span>
+                  <span class="dev t-light text-shadowed-dark">Second Dinner</span>
+                </div>
+              </div>
+
+            </div>
+            <div class="voting-content-second">
+              <div class="content voting-content2 d-flex">
+                <button><i class="fa-solid fa-circle-arrow-up"></i></button>
+                <div class="title-dev d-flex">
+                  <span class="title t-light text-shadowed-dark">God of War Ragnarök</span>
+                  <span class="dev t-light text-shadowed-dark">Santa Monica Studio</span>
+                </div>
+              </div>
+              <div class="content voting-content4 d-flex">
+                <button><i class="fa-solid fa-circle-arrow-up"></i></button>
+                <div class="title-dev d-flex">
+                  <span class="title t-light text-shadowed-dark">Final Fantasy XVI</span>
+                  <span class="dev t-light text-shadowed-dark">Square Enix</span>
+                </div>
+              </div>
+              <div class="content voting-content6 d-flex">
+                <button><i class="fa-solid fa-circle-arrow-up"></i></button>
+                <div class="title-dev d-flex">
+                  <span class="title t-light text-shadowed-dark">Starfield</span>
+                  <span class="dev t-light text-shadowed-dark">Bethesda Game Studios</span>
+                </div>
+              </div>
+              <div class="content voting-content8 d-flex">
+                <button><i class="fa-solid fa-circle-arrow-up"></i></button>
+                <div class="title-dev d-flex">
+                  <span class="title t-light text-shadowed-dark">Vampire Survivors</span>
+                  <span class="dev t-light text-shadowed-dark">Luca Galante</span>
+                </div>
+              </div>
+              <div class="content voting-content10 d-flex">
+                <button><i class="fa-solid fa-circle-arrow-up"></i></button>
+                <div class="title-dev d-flex">
+                  <span class="title t-light text-shadowed-dark">Citizen Sleeper</span>
+                  <span class="dev t-light text-shadowed-dark">Jump Over the Age</span>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
